--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -3,7 +3,7 @@ name : Test
 
 on :
   push :
-    branches : [ experiment ]
+    branches : [ test ]
   pull_request :
     branches : [ master ]
   pull_request_review :
